# cutie-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg
io/: .gitignore  automask-generator-session.sh  hsr_record.sh  tmux.sh
io/masks/: .gitignore
io/rviz/: hsr_visualization.rviz  mask.rviz
io/weights/: README.md
launch/: cutie_service.launch
script/: auto_mask_generator.py  cutie_service_node.py  download_weights_fakeroot.py  estimate_3d_pose_publisher.py  lib_tracking.py  test_node_detection.py  test_node_folder.py
scripts/: cutie_service.py  cutie_service_node.py  test_node.py  test_node_folder.py  visualize_mask_image.py
src/cutie_utils/: __init__.py  lib_tracking.py
srv/: StartTracking.srv  StopTracking.srv
